--- a/client/src/components/keyFeatureCard/keyFeatureCard.module.css
+++ b/client/src/components/keyFeatureCard/keyFeatureCard.module.css
@@ -4,26 +4,28 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 100%;
-    height: 100%;
+    width: 350px;
+    height: 350px;
     padding: 0;
     box-sizing: border-box;
     background-color: transparent;
-    border-radius: 10px;
+    border-radius: 35px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     transition: all 0.3s ease-in-out;
+    padding: 35px;
+    background-color: #D35473;
 }
 
 .title{
-    font-size: 18px;
-    font-weight: 700;
+    width: 100%;
+    font-size: 24px;
     color: #FFC55A;
     margin: 0;
     padding: 0;
 }
 
 .desc{
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     color: white;
     margin: 0;
